tests/fixtures/invalid/bool_notin_int.py
# Cannot use 'not in' with Bool and Int
x: bool = True not in 1
